Mail::Mailer is still required when we test everything

--- a/.github/workflows/perl-tests.yml
+++ b/.github/workflows/perl-tests.yml
@@ -30,6 +30,7 @@ jobs:
         run: |
           cpanm Log::Dispatchouli@2.023
           cpanm Mojolicious@8.66
+          cpanm Mail::Mailer
       - name: Install prereqs (cpan)
         # This could probably be made more efficient by looking at what it's
         # installing via cpanm that could, instead, be installed from apt.  I
